# real-time-monitoring-dashboard

./: README.md  a.md  build_native_lib.bat  pubspec.yaml  setup.bat  setup.sh
assets/: libcpu_monitor.dylib
lib/: main.dart
lib/models/: system_info.dart  system_stats.dart
lib/pages/: cpu_page.dart  info_page.dart  memory_page.dart  overview_page.dart
lib/screens/: dashboard_screen.dart
lib/screens/widgets/: cpu_chart.dart  disk_chart.dart  disk_storage_card.dart  memory_chart.dart  metric_card.dart  system_info_card.dart
lib/services/: cpu_provider.dart  cpu_services.dart  theme_provider.dart
lib/theme/: app_theme.dart
lib/widgets/: library_status_widget.dart
libs/: libcpu_monitor.dylib
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
native/: CMakeLists.txt  README.md  build.bat  build.sh  cpu_usage.cpp  post_build.bat  post_build.sh
native/linux/: cpu_monitor.c  cpu_monitor.h
native/macos/: cpu_monitor.c  cpu_monitor.h
native/windows/: cpu_monitor.c  cpu_monitor.h
screenshots/real_time_monitoring_dashboard.app/Contents/: Info.plist
screenshots/real_time_monitoring_dashboard.app/Contents/MacOS/: real_time_monitoring_dashboard
screenshots/real_time_monitoring_dashboard.app/Contents/_CodeSignature/: CodeResources
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
(+4 files in other folders)
